@@ -468,6 +468,9 @@
 #define WTF_USE_FREETYPE 1
 #define WTF_USE_HARFBUZZ 1
 #define WTF_USE_SOUP 1
+#endif
+
+#if PLATFORM(GTK) || PLATFORM(EFL)
 #define WTF_USE_WEBP 1
 #endif
 
