@@ -1,3 +1,15 @@
+2014-10-11  KwangHyuk Kim  <hyuki.kim@samsung.com>
+
+        [EFL] Enable WebP support.
+        https://bugs.webkit.org/show_bug.cgi?id=136156
+
+        Reviewed by Gyuyoung Kim.
+
+        Add WebP library and inlcude path to WebCore path for WK2 Efl.
+        No new tests since existing feature is just enabled for WK2 Efl.
+
+        * PlatformEfl.cmake:
+
 2014-10-11  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GLIB] Split GMainLoopSource moving thread safe implementation to its own class GThreadSafeMainLoopSource
