@@ -1,3 +1,14 @@
+2014-10-11  KwangHyuk Kim  <hyuki.kim@samsung.com>
+
+        [EFL] Enable WebP support.
+        https://bugs.webkit.org/show_bug.cgi?id=136156
+
+        Reviewed by Gyuyoung Kim.
+
+        Enable WTF_USE_WEBP macro for WK2 Efl.
+
+        * wtf/Platform.h:
+
 2014-10-11  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GLIB] Split GMainLoopSource moving thread safe implementation to its own class GThreadSafeMainLoopSource
